# pypto-tooling

./: .gitignore  .mcp.json  Dockerfile.hw-native-sys.cann9.0  Dockerfile.hw-native-sys.dev.cann9.0  Dockerfile.hw-native-sys.sim.ubuntu22.04  Dockerfile.pypto-lib.cann9.0  Dockerfile.pypto-lib.sim.ubuntu22.04  Dockerfile.pytorch-hccl-tests.cann9.0  Dockerfile.server  Dockerfile.server.cann  Dockerfile.server.cann:9.0  Dockerfile.simpler.cann9.0  Dockerfile.simpler.dev.cann9.0  Dockerfile.simpler.sim.ubuntu22.04  README.md  [deprecated]bz910b-reproduce.md  attach_container_workflow.md  bz910b-reproduce.md  diagnose_npu.py  docker-entrypoint-cann.sh  personal_setup.md  pypto-tooling.code-workspace
mcp-hw-native-sys/: README.md  pyproject.toml
mcp-hw-native-sys/config/: .index_build_time  abstractions.json  ascend_abstractions.json  collective_status.json  contract_artifacts.json  entrypoints.json  knowledge.json  passes_index.json  program_status.json  programs.json  pto_isa_generated.json  ptoas_generated.json  repos.json
mcp-hw-native-sys/hw_native_sys_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mcp-hw-native-sys/mcp_hwnative_sys/: __init__.py  ascend_env.py  bootstrap.py  collective_status.py  contract_trace.py  doc_sections.py  handoff.py  knowledge.py  passes_index.py  paths.py  profiling_summarize.py  program_status.py  programs.py  server.py  verify_ladder.py
mcp-hw-native-sys/tests/: test_build_pto_isa_index.py  test_build_ptoas_index.py  test_collective_status.py  test_doc_sections.py  test_doc_tier.py  test_json_cache.py  (+7 more)
(+121 files in other folders)
